# intrusionDetect

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  live.py  main.py  service.py
backend/app/api/: __init__.py  alerts.py  live.py  models.py  predictions.py  replay.py  schemas.py
backend/app/database/: __init__.py  models.py  session.py
backend/app/detection/: __init__.py  device_profiles.py  drift.py  severity.py
backend/app/features/: __init__.py  canonical_schema.py  cicflowmeter_adapter.py  validation.py  zeek_adapter.py
backend/app/inference/: __init__.py  calibration.py  explanations.py  model_registry.py  predictor.py
backend/app/ingestion/: __init__.py  dataset_replay.py  live_capture.py  pcap_replay.py
backend/tests/: conftest.py  test_api.py  test_batch_live.py  test_registry.py  test_replay.py  test_schema.py
data/: dataset-manifest.json
data/sample/: rt_iot2022_sample.csv
data/schema/: rt_iot2022_v1.json
docs/: evaluation-protocol.md  feature-schema.md  implementation-roadmap.md  research-foundations.md  system-architecture.md
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  data.ts  sampleObservation.ts  styles.css  types.ts  utils.ts
machine-learning/: README.md  pyproject.toml
machine-learning/scripts/: generate_fixture.py
machine-learning/src/iot_ids_ml/: __init__.py  cli.py  evaluation.py  inference.py  schema.py  training.py  validation.py
machine-learning/tests/: conftest.py  test_schema_validation.py  test_training.py
models/artifacts/: binary-logistic_regression-0fa0d0a15572.joblib  (+5 more)
scripts/: run_all.sh
(+25 files in other folders)
