[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iot-intrusion-backend"
version = "0.1.0"
description = "FastAPI backend for the IoT intrusion detection system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135,<1",
  "starlette>=1,<2",
  "pydantic>=2.9,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.30,<1",
  "joblib>=1.4,<2",
  "pandas>=2.2,<4",
  "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2,<4"]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
