[project]
name = "iot-ids-ml"
version = "0.1.0"
description = "Reproducible RT-IoT2022 validation and baseline training"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4,<2",
  "numpy>=2.0,<3",
  "pandas>=2.2,<4",
  "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.9,<1",
]

[project.scripts]
iot-ids-profile = "iot_ids_ml.cli:profile_main"
iot-ids-train = "iot_ids_ml.cli:train_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iot_ids_ml"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

